fix filter alignment

--- a/frontend/packages/data-portal/app/components/Filters/Filters.module.css
+++ b/frontend/packages/data-portal/app/components/Filters/Filters.module.css
@@ -15,6 +15,10 @@
 
     ~ div {
       @apply pl-sds-s;
+
+      &:empty {
+        @apply hidden;
+      }
     }
   }
 
